# dynaudiotest

./: .gitignore  CMakeLists.txt  LICENSE
DockerRun/: Dockerfile
src/: practical1.cpp  test1.cpp  test2.cpp
src/common/: alhelpers.c  alhelpers.h
